<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.makpro.recipedesign1.Fragments.vegetableFragment"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="748dp"
        android:id="@+id/scrollView2"
        android:layout_weight="0.2"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potatoes"
                android:id="@+id/CBpotatoes"
                android:checked="false"
                android:textSize="20sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carrot"
                android:id="@+id/CBcarrot"
                android:checked="false"
                android:textSize="20sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beet"
                android:id="@+id/CBbeet"
                android:checked="false"
                android:textSize="20sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boot"
                android:id="@+id/CBboot"
                android:checked="false"
                android:textSize="20sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/garlic"
                android:checked="false"
                android:id="@+id/CBgarlic"
                android:textSize="20sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cucumber"
                android:id="@+id/CBcucumber"
                android:checked="false"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:id="@+id/apply2"
        android:layout_weight="0.72" />
</LinearLayout>
