<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    tools:context="com.example.makpro.recipedesign1.Fragments.MeatFragment"
    android:weightSum="1"
    android:background="@drawable/meatt">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="748dp"
        android:id="@+id/scrollView"
        android:layout_weight="0.6">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Chicken"
                android:id="@+id/CBchicken"
                android:checked="false"
                android:textSize="20sp"
                android:textColor="#000000" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pig"
                android:id="@+id/CBpig"
                android:checked="false"
                android:textSize="20sp"
                android:textColor="#000000" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turkey"
                android:id="@+id/CBturkey"
                android:checked="false"
                android:textSize="20sp"
                android:textColor="#000000" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cow"
                android:id="@+id/CBcow"
                android:checked="false"
                android:textSize="20sp"
                android:textColor="#000000" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rabbit"
                android:id="@+id/CBrabbit"
                android:checked="false"
                android:textSize="20sp"
                android:textColor="#000000" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bear"
                android:id="@+id/CBbear"
                android:checked="false"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textColorHighlight="#000000" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.4">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:id="@+id/apply"
            android:background="#ef8d8d" />

    </LinearLayout>

</LinearLayout>
