<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.makpro.recipedesign1.Fragments.milk"
    android:weightSum="1"
    android:background="@drawable/milk">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="385dp"
        android:id="@+id/scrollView3"
        android:layout_weight="0.8">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milk"
                android:id="@+id/milkBox"
                android:checked="false"
                android:textColor="#000000"
                android:textSize="21dp"
                android:textColorHighlight="#000000" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cheese"
                android:id="@+id/cheeseBox"
                android:checked="false"
                android:textColor="#000000"
                android:textSize="21dp"
                android:textColorHighlight="#000000" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Кефир"
                android:id="@+id/curdBox"
                android:checked="false"
                android:textColor="#000000"
                android:textSize="21dp"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sour"
                android:id="@+id/sourBox"
                android:checked="false"
                android:textColor="#000000"
                android:textSize="21dp"
                android:textColorHighlight="#000000" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cream"
                android:id="@+id/creamBox"
                android:checked="false"
                android:textColor="#000000"
                android:textSize="21dp"
                android:textColorHighlight="#000000" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.23">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply3"
            android:id="@+id/milkApply"
            android:background="#0a9451" />
    </LinearLayout>

</LinearLayout>
