<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.makpro.recipedesign1.Fragments.corn"
    android:background="@drawable/categorypic"
    android:baselineAligned="true">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="748dp"
        android:id="@+id/scrollView5"
        android:layout_weight="0.6">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Рис"
                android:id="@+id/riceB"
                android:checked="false"
                android:textSize="25dp"
                android:textColor="#000000" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Овсянка"
                android:id="@+id/oatmealB"
                android:checked="false"
                android:textSize="25dp"
                android:textColor="#000000" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Пшено"
                android:id="@+id/milletB"
                android:checked="false"
                android:textSize="25dp"
                android:textColor="#000000" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Гречка"
                android:id="@+id/buckwheatB"
                android:checked="false"
                android:textSize="25dp"
                android:textColor="#000000" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="APPLY"
            android:id="@+id/applyCorn"
            android:background="#b677ee" />
    </LinearLayout>

</LinearLayout>
